# telemetry-with-pico-sdk

./: CMakeLists.txt
Reciver/: CMakeLists.txt  reciver.cpp
transmitter/: CMakeLists.txt  transmitter.cpp
